--- a/trunk/NetNew/UIL/Web.config
+++ b/trunk/NetNew/UIL/Web.config
@@ -8,11 +8,13 @@
 		<add name="ApolloEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=129.16.213.108\SQLEXPRESS;Initial Catalog=Apollo;Persist Security Info=True;User ID=apollo;Password=apollo;&quot;" providerName="System.Data.EntityClient"/>
 	</connectionStrings>
 	<system.web>
-    <customErrors mode="Off"></customErrors>
+		<customErrors mode="Off"></customErrors>
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
 				<add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></assemblies></compilation>
+				<add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+				<add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+				<add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/></assemblies></compilation>
 		<authentication mode="Forms">
 			<forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
 		</authentication>
