--- a/trunk/JAVA/VMSClient/nbproject/project.properties
+++ b/trunk/JAVA/VMSClient/nbproject/project.properties
@@ -1,5 +1,5 @@
 abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,capuchin=1.0,MIDP=2.1,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,TouchScreen,JSR239=1.0,JSR211=1.0,JSR234=1.0,ScreenWidth=240,MascotV3=1.0,JSR75=1.0,IAPInfo=1.0,SATSAPKI=1.0,JSR184=1.1,ScreenHeight=321,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0,
-all.configurations=\ ,SonyEricsson_K750_Emu,SonyEricsson_M600_Emu,SonyEricsson_P900_Emu,SonyEricsson_W810_Emu,SonyEricsson_W900_Emu
+all.configurations=\ ,S60Device,S60Emulator,SonyEricsson_K750_Emu,SonyEricsson_M600_Emu,SonyEricsson_P900_Emu,SonyEricsson_W810_Emu,SonyEricsson_W900_Emu
 application.args=
 application.description=
 application.description.detail=
@@ -9,6 +9,32 @@ build.classes.dir=${build.dir}/compiled
 build.classes.excludes=**/*.java,**/*.form,**/*.class,**/.nbintdb,**/*.mvd,**/*.wsclient,**/*.vmd
 build.dir=build/${config.active}
 build.root.dir=build
+configs.S60Device.abilities=MMAPI=1.0,OBEX=1.0,ColorScreen,JSR82=1.0,NOKIAUI=1.0,ScreenWidth=240,JSR75=1.0,MIDP=2.0,CLDC=1.1,JSR179=1.0,JSR184=1.0,ScreenHeight=320,ScreenColorDepth=12,WMA=2.0,JSR172=1.0
+configs.S60Device.javac.source=1.3
+configs.S60Device.javac.target=1.3
+configs.S60Device.platform.active=S60_3rd_Edition_FP1_SDK_for_MIDP_instance_2
+configs.S60Device.platform.active.description=S60 3rd Edition FP1 SDK for MIDP instance 2
+configs.S60Device.platform.apis=JSR75-1.0
+configs.S60Device.platform.bootclasspath=${platform.home}/lib/hmidps60v31.jar
+configs.S60Device.platform.configuration=CLDC-1.1
+configs.S60Device.platform.device=S60Device
+configs.S60Device.platform.fat.jar=true
+configs.S60Device.platform.profile=MIDP-2.0
+configs.S60Device.platform.trigger=CLDC
+configs.S60Device.platform.type=UEI-1.0
+configs.S60Emulator.abilities=MMAPI=1.0,OBEX=1.0,ColorScreen,JSR82=1.0,NOKIAUI=1.0,ScreenWidth=240,JSR75=1.0,MIDP=2.0,CLDC=1.1,JSR179=1.0,JSR184=1.0,ScreenHeight=320,ScreenColorDepth=12,WMA=2.0,JSR172=1.0
+configs.S60Emulator.javac.source=1.3
+configs.S60Emulator.javac.target=1.3
+configs.S60Emulator.platform.active=S60_3rd_Edition_FP1_SDK_for_MIDP
+configs.S60Emulator.platform.active.description=S60 3rd Edition FP1 SDK for MIDP
+configs.S60Emulator.platform.apis=JSR75-1.0
+configs.S60Emulator.platform.bootclasspath=${platform.home}/lib/hmidps60v31.jar
+configs.S60Emulator.platform.configuration=CLDC-1.1
+configs.S60Emulator.platform.device=S60Emulator
+configs.S60Emulator.platform.fat.jar=true
+configs.S60Emulator.platform.profile=MIDP-2.0
+configs.S60Emulator.platform.trigger=CLDC
+configs.S60Emulator.platform.type=UEI-1.0
 configs.SonyEricsson_K750_Emu.abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,NOKIAUI=1.0,JSR226=1.0,MIDP=2.1,capuchin=1.0,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,eSWT=1.1,J2MEWS=1.0,VSCL=2.1,WMA=2.0,JSR172=1.0,JSR256=1.1,SEMC_EXT_JP8=1.0,ColorScreen,NokiaUI=1.0,OBEX=1.0,JSR238=1.0,JSR239=1.0,JSR211=1.0,JSR234=1.0,MascotV3=1.0,ScreenWidth=176,IAPInfo=1.0,JSR75=1.0,JSR184=1.1,SATSAPKI=1.0,ScreenHeight=221,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0
 configs.SonyEricsson_K750_Emu.filter.exclude.tests=true
 configs.SonyEricsson_K750_Emu.filter.excludes=
