--- a/trunk/NetNew/Utils/Utils.csproj
+++ b/trunk/NetNew/Utils/Utils.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,11 +48,20 @@
     <Compile Include="Enumerations.cs" />
     <Compile Include="Exceptions\VMSException.cs" />
     <Compile Include="GeoUtil.cs" />
+    <Compile Include="GridUtil.cs" />
     <Compile Include="ObservableList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection.cs" />
     <Compile Include="UIMessage.cs" />
     <Compile Include="Validation.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="GridStyles\Grid_Niko.css" />
+    <Content Include="GridStyles\Grid_CilginKirmizi.css" />
+    <Content Include="GridStyles\Grid_MaviSari.css" />
+    <Content Include="GridStyles\Grid_MaviYesil.css" />
+    <Content Include="GridStyles\Grid_OrangeYouGlad.css" />
+    <Content Include="GridStyles\Grid_TableSpirit.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
