--- a/NetNew/DAL/DAL.csproj
+++ b/NetNew/DAL/DAL.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Entities\Incident.cs" />
     <Compile Include="Entities\Manager.cs" />
     <Compile Include="Entities\NeedItem.cs" />
+    <Compile Include="Entities\ProgressReport.cs" />
     <Compile Include="Entities\Volunteer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
