--- a/NetNew/DAL/DAL.csproj
+++ b/NetNew/DAL/DAL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Entities\Manager.cs" />
     <Compile Include="Entities\NeedItem.cs" />
     <Compile Include="Entities\ProgressReport.cs" />
+    <Compile Include="Entities\Request.cs" />
     <Compile Include="Entities\Volunteer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
